--- a/.devops/build-nuget.yml
+++ b/.devops/build-nuget.yml
@@ -57,7 +57,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'push'
-    packagesToPush: '**/*.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/Landlock.$(targetVersion).nupkg'
     nuGetFeedType: 'external'
     publishFeedCredentials: 'nuget-curiosity-org'
   displayName: 'push nuget'
