--- a/Landlock/Landlock.csproj
+++ b/Landlock/Landlock.csproj
@@ -12,5 +12,9 @@
         <Company>Curiosity GmbH</Company>
         <Copyright>(c) Copyright 2025 Curiosity GmbH - all right reserved</Copyright>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
 </Project>
