--- a/Landlock/Landlock.csproj
+++ b/Landlock/Landlock.csproj
@@ -14,6 +14,8 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>logo.png</PackageIcon>
+        <RepositoryUrl>https://github.com/curiosity-ai/landlock-sharp</RepositoryUrl>
+        <PackageProjectUrl>www.curiosity.ai</PackageProjectUrl>
     </PropertyGroup>
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
